[fix] 1. 주간 리포트 오류 수정